--- a/business/templates/MoneyReferringFriends.html
+++ b/business/templates/MoneyReferringFriends.html
@@ -26,11 +26,11 @@
 
     <section class="main-content">
 
-        <div class="row">
-            <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/B_I2hV_HWMQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </div>
+{#        <div class="row">#}
+{#            <div class="col-md-12">#}
+{#                <iframe width="100%" height="515" src="https://www.youtube.com/embed/B_I2hV_HWMQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>#}
+{#            </div>#}
+{#        </div>#}
         <style media="screen">
             .card-body {
                 text-align: center;
