--- a/business/templates/businessCreditBuilding/CreditBuildingTemplates/411.html
+++ b/business/templates/businessCreditBuilding/CreditBuildingTemplates/411.html
@@ -8,7 +8,7 @@
 <br><br>
 
 <div class="row">
-    <div class="col-md-5">
+    <div class="col-xl-6">
         <div class="card">
             <div class="card-body">
                 <img src="https://millennialbusinessbuilders.com/411.jpg" height="200px" width="100%" alt="">
