--- a/business/templates/businessCreditBuilding/CreditBuildingTemplates/ein.html
+++ b/business/templates/businessCreditBuilding/CreditBuildingTemplates/ein.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-5">
+    <div class="col-xl-6">
         <div class="card">
             <div class="card-body">
                 <img src="https://images.pexels.com/photos/1367269/pexels-photo-1367269.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <div class="col-md-5">
+    <div class="col-xl-6">
         <div class="card">
             <div class="card-body">
                 <img src="https://images.pexels.com/photos/936137/pexels-photo-936137.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
