--- a/whitelabelpartnerportal/templates/WholeSaleSection/PartnerResources.html
+++ b/whitelabelpartnerportal/templates/WholeSaleSection/PartnerResources.html
@@ -10,7 +10,7 @@
 {% block content %}
     <div class="row page-header">
         <div class="col-lg-6 align-self-center ">
-            <h2>Wholesale Packages</h2></div>
+            <h2>Partner Resources</h2></div>
     </div>
 
     <section class="main-content">
@@ -24,7 +24,7 @@
                                     <img class="mb-2" style="height: 100px"
                                          src="https://s3-us-east-2.amazonaws.com/suitelogin-production/wp-content/uploads/2017/05/03205352/Gathering-Intelligence-and-Closing-the-Sale-180X180.jpg">
                                     <h3>${product.name}</h3>
-                                    <a class="btn btn-primary btn-block" v-bind:href="product.url">View</a>
+                                    <a class="btn btn-primary btn-block" v-bind:href="product.url" target="_blank">View</a>
                                 </div>
                             </div>
                         </div>
