--- a/business/templates/businessCreditBuilding/CreditBuildingTemplates/bankaccount.html
+++ b/business/templates/businessCreditBuilding/CreditBuildingTemplates/bankaccount.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-xl-6">
         <div class="card">
             <div class="card-body">
                 <img src="https://dvh1deh6tagwk.cloudfront.net/niche-builder/5daca7d7e8528.png" height="200px"
@@ -22,7 +22,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-xl-6">
         <div class="card">
             <div class="card-body">
                 <img src="https://d187qskirji7ti.cloudfront.net/companies/wide_images/000/000/005/1518101921_large.png"
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-xl-6">
         <div class="card">
             <div class="card-body">
                 <img src="https://spring.capitalone.com/img/print-logo-blue.png" height="200px" width="100%"
