--- a/business/templates/businessCreditBuilding/CreditBuildingTemplates/email.html
+++ b/business/templates/businessCreditBuilding/CreditBuildingTemplates/email.html
@@ -7,7 +7,7 @@
             </div>
 
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-xl-6">
                     <div class="card">
                         <div class="card-body">
                             <img src="https://images.pexels.com/photos/193003/pexels-photo-193003.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
