--- a/business/templates/businessCreditBuilding/CreditBuildingTemplates/license.html
+++ b/business/templates/businessCreditBuilding/CreditBuildingTemplates/license.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-xl-6">
         <div class="card">
             <div class="card-body">
                 <img src="https://images.pexels.com/photos/2312369/pexels-photo-2312369.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-xl-6">
         <div class="card">
             <div class="card-body">
                 <img src="https://images.pexels.com/photos/937481/pexels-photo-937481.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
@@ -50,7 +50,7 @@
         </div>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-xl-6">
         <div class="card">
             <div class="card-body">
                 <img src="https://images.pexels.com/photos/1181533/pexels-photo-1181533.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
