--- a/business/templates/BusinessCredibilityChecklist/MainCheckList.html
+++ b/business/templates/BusinessCredibilityChecklist/MainCheckList.html
@@ -63,6 +63,19 @@
                                        href="{% url "business:business_credibility_establishing" %}">Step 2: Establish
                                         Business Reports</a>
                                 </div>
+                                <div>
+                                    {% if not othersteps.established %}
+                                        <form method="post">{% csrf_token %}
+                                            <input type="hidden" name="step" value="2">
+                                            <button href="#" type="submit">Mark As Complete</button>
+                                        </form>
+                                    {% else %}
+                                        <form method="post">{% csrf_token %}
+                                            <input type="hidden" name="undo" value="2">
+                                            <button href="#" type="submit">Mark As Not Complete</button>
+                                        </form>
+                                    {% endif %}
+                                </div>
                             </div>
 
 
@@ -81,10 +94,15 @@
                                 </div>
                                 <div>
                                     {% if not othersteps.tier1 %}
-                                    <form method="post">{% csrf_token %}
-                                        <input type="hidden" name="step" value="3">
-                                        <button href="#" type="submit">Mark As Complete</button>
-                                    </form>
+                                        <form method="post">{% csrf_token %}
+                                            <input type="hidden" name="step" value="3">
+                                            <button href="#" type="submit">Mark As Complete</button>
+                                        </form>
+                                    {% else %}
+                                        <form method="post">{% csrf_token %}
+                                            <input type="hidden" name="undo" value="3">
+                                            <button href="#" type="submit">Mark As Not Complete</button>
+                                        </form>
                                     {% endif %}
                                 </div>
                             </div>
@@ -104,10 +122,15 @@
                                 <div>
                                     {% if not othersteps.monitor %}
 
-                                    <form method="post">{% csrf_token %}
-                                        <input type="hidden" name="step" value="4">
-                                        <button href="#" type="submit">Mark As Complete</button>
-                                    </form>
+                                        <form method="post">{% csrf_token %}
+                                            <input type="hidden" name="step" value="4">
+                                            <button href="#" type="submit">Mark As Complete</button>
+                                        </form>
+                                    {% else %}
+                                        <form method="post">{% csrf_token %}
+                                            <input type="hidden" name="undo" value="4">
+                                            <button href="#" type="submit">Mark As Not Complete</button>
+                                        </form>
                                     {% endif %}
                                 </div>
                             </div>
@@ -127,10 +150,15 @@
                                 </div>
                                 <div>
                                     {% if not othersteps.tier2 %}
-                                    <form method="post">{% csrf_token %}
-                                        <input type="hidden" name="step" value="5">
-                                        <button href="#" type="submit">Mark As Complete</button>
-                                    </form>
+                                        <form method="post">{% csrf_token %}
+                                            <input type="hidden" name="step" value="5">
+                                            <button href="#" type="submit">Mark As Complete</button>
+                                        </form>
+                                    {% else %}
+                                        <form method="post">{% csrf_token %}
+                                            <input type="hidden" name="undo" value="5">
+                                            <button href="#" type="submit">Mark As Not Complete</button>
+                                        </form>
                                     {% endif %}
                                 </div>
                             </div>
@@ -149,10 +177,15 @@
                                 </div>
                                 <div>
                                     {% if not othersteps.tier3 %}
-                                    <form method="post">{% csrf_token %}
-                                        <input type="hidden" name="step" value="6">
-                                        <button href="#" type="submit">Mark As Complete</button>
-                                    </form>
+                                        <form method="post">{% csrf_token %}
+                                            <input type="hidden" name="step" value="6">
+                                            <button href="#" type="submit">Mark As Complete</button>
+                                        </form>
+                                    {% else %}
+                                        <form method="post">{% csrf_token %}
+                                            <input type="hidden" name="undo" value="6">
+                                            <button href="#" type="submit">Mark As Not Complete</button>
+                                        </form>
                                     {% endif %}
                                 </div>
                             </div>
@@ -171,10 +204,15 @@
                                 </div>
                                 <div>
                                     {% if not othersteps.tier4 %}
-                                    <form method="post">{% csrf_token %}
-                                        <input type="hidden" name="step" value="7">
-                                        <button href="#" type="submit">Mark As Complete</button>
-                                    </form>
+                                        <form method="post">{% csrf_token %}
+                                            <input type="hidden" name="step" value="7">
+                                            <button href="#" type="submit">Mark As Complete</button>
+                                        </form>
+                                    {% else %}
+                                        <form method="post">{% csrf_token %}
+                                            <input type="hidden" name="undo" value="7">
+                                            <button href="#" type="submit">Mark As Not Complete</button>
+                                        </form>
                                     {% endif %}
                                 </div>
                             </div>
