--- a/financing_portal/templates/FinancingPortalNavigationBase.html
+++ b/financing_portal/templates/FinancingPortalNavigationBase.html
@@ -32,7 +32,7 @@
 
 
                 <ul class="metisMenu nav flex-column" id="menu">
-                    <li class="nav-item"><a href="{% url 'financing_portal:products-purchased' %}" class="nav-link">Products Purchaseed</a></li>
+                    <li class="nav-item"><a href="{% url 'financing_portal:products-purchased' %}" class="nav-link">Products Purchased</a></li>
                 </ul>
 
 
