--- a/financing_portal/templates/FinancingPortalHomePage.html
+++ b/financing_portal/templates/FinancingPortalHomePage.html
@@ -41,7 +41,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <a class="btn btn-primary">Used Terms +</a>
+                      <a href="{% url 'financing_portal:payments' %}" class="btn btn-primary">View Terms +</a>
                     </div>
                 </div>
             </div>
