--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -385,6 +385,10 @@
                             <a href="https://www.getdinerotoday.com/customersuccessagent/" target="_blank" class="nav-link"><span
                                     class="toggle-none">Your AI Customer Success Agent</span></a>
                         </li>
+                                             <li class="nav-item">
+                          <a href="https://getdinerotodaystore.com/" target="_blank" class="nav-link"><span
+                                  class="toggle-none">Shop At Our Online Store <br> *(Get Business Cards, Clothes & Much More!)*</span></a>
+                      </li>
 
                         <br><br><br>
                     </ul>
