--- a/getdinerotoday/templates/landingpages/contact.html
+++ b/getdinerotoday/templates/landingpages/contact.html
@@ -46,7 +46,7 @@
           <h2>Stay In Contact With Us</h2>
           <p>Get in touch and let us know how we can help. Fill out the form and we’ll be in touch as soon as possible.</p>
         </div>
-       <div class="powr-form-builder" id="40130aeb_1578137326"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
+      <div class="powr-contact-form" id="40f61a7e_1608886084"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
       </div>
     </div>
   </div>
