--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -322,6 +322,25 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-lg-4 col-md-12">
+                        <div class="featured-item style-2">
+                            <div class="featured-icon"><i class="flaticon-data"></i>
+                                <span class="rotateme"></span>
+                            </div>
+                            <div class="featured-title">
+                                <h5>Get Exclusive Access To Our 15+ Softwares <br>That Help Grow Your Business </h5>
+                            </div>
+                            <div class="featured-desc">
+                                <p>Get Access To Our 15+ Softwares. </p> <br>
+                                <b><p>Here Are A Few Examples Of Our Softwares That You Would Get Access Too:</p></b><br>
+                                <p>1) Website Builder</p>
+                                <p>2) File Sharing Software</p>
+                                <p>3) Accounting Software</p>
+                                <p>4) Customer Relationship Management Software</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
