--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -389,6 +389,10 @@
                           <a href="https://getdinerotodaystore.com/" target="_blank" class="nav-link"><span
                                   class="toggle-none">Shop At Our Online Store <br> *(Get Business Cards, Clothes & Much More!)*</span></a>
                       </li>
+                      <!--
+                      <li class="nav-item">
+                          <a href="{% url 'onboarding:onboardinghome' %}" class="nav-link"> Client Onboarding</a>
+                      </li> -->
 
                         <br><br><br>
                     </ul>
