--- a/getdinerotoday/templates/components/JavaScriptBlock.html
+++ b/getdinerotoday/templates/components/JavaScriptBlock.html
@@ -96,6 +96,16 @@
   $(function() { $.smartbanner() } )
 </script>
 
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "72b090eb-60f1-4424-b837-81a6e7882eba",
+    });
+  });
+</script>
+
 
 <!--
 
