--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -341,10 +341,10 @@
                             <a href="{% url 'products:dnbproducts' %}" class="nav-link"> Purchase Dunn & Bradstreet
                                 Products</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a href="{% url 'onlinetools:onlinetoolshome' %}" class="nav-link"> See Online Tools That
                                 Help Grow Your Business</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a href="/{{ request.resolver_match.app_name }}/insurance-products" class="nav-link">
                                 Insurance Products </a>
@@ -378,10 +378,10 @@
                             <a href="{% url 'business:faqs' %}" class="nav-link"> Frequently Asked Questions</a>
                         </li>
 
-                        <li class="nav-item">
+                      <!--  <li class="nav-item">
                             <a href="https://tawk.to/chat/5f678306f0e7167d00120839/default" target="_blank" class="nav-link"><span
                                     class="toggle-none">Live Chat</span></a>
-                        </li>                        <li class="nav-item">
+                        </li>      -->                  <li class="nav-item">
                             <a href="https://www.getdinerotoday.com/customersuccessagent/" target="_blank" class="nav-link"><span
                                     class="toggle-none">Your AI Customer Success Agent</span></a>
                         </li>
