--- a/getdinerotoday/templates/components/AlanAI.html
+++ b/getdinerotoday/templates/components/AlanAI.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="alan-btn"></div>
+<!-- <div class="alan-btn"></div>
 
 
 <script type="text/javascript" src="https://studio.alan.app/web/lib/alan_lib.js"></script>
@@ -35,4 +35,4 @@
         },
         rootEl: document.getElementById("alan-btn"),
     });
-</script>
+</script> -->
