--- a/business/templates/businessCreditBuilding/steps/guidedCreation.html
+++ b/business/templates/businessCreditBuilding/steps/guidedCreation.html
@@ -176,6 +176,16 @@
 
 
                             </div>
+                            <div class="text-center">
+                                 ${currentPage.id+ 1} / ${pages.length}
+
+                            </div>
+
+                            <div class="progress mx-5 mb-2">
+                                <div class="progress-bar" role="progressbar" :style="{ width: calculateProgress() + '%' }" aria-valuenow="25"
+                                     aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+
                             <div class="card-footer d-flex justify-content-between">
                                 <div v-if="currentPage.id !== 0">
                                     <button class="btn btn-primary" v-on:click="prevPage">Back</button>
@@ -195,7 +205,9 @@
 
                                 <form method="post" id="steps-form" style="display: none">{% csrf_token %}</form>
                                                                 </div>
+
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -397,6 +409,10 @@
                         }
 
                     }
+                },
+
+                calculateProgress: function () {
+                    return ((this.currentPage.id + 1) / this.pages.length) * 100
                 },
 
                 onDomainChange: function (e) {
